# ml-fastapi-deployment

./: .gitignore  README.md  REDME.md  config.py  config.yml  pyproject.toml  requirements.txt
sentiment_model/: model.py
